syntax = "proto3";

package api;

message CreateAddressRequest {
    string name = 1;
    string type = 2;
    int32 parent = 3;
}

message AddressResponse {
    int32 id = 1;
    string name = 2;
    string type = 3;
    int32 parent = 4;
}

message GetAddressesByParentRequest {
    int32 parent = 1;
}

message GetAddressesByParentResponse {
    repeated AddressResponse items = 1;
}

message GetAddressByIdRequest {
    int32 id = 1;
}

message DeleteAddressRequest {
    int32 id = 1;
}

message Empty {

}

service AddressService {
    rpc CreateAddress(CreateAddressRequest) returns (AddressResponse){}
    rpc GetAddressesByParent(GetAddressesByParentRequest) returns (GetAddressesByParentResponse) {}
    rpc GetAddressById(GetAddressByIdRequest) returns (AddressResponse) {}
    rpc DeleteAddress(DeleteAddressRequest) returns (Empty) {}
}
